@@ -53,8 +53,8 @@ dependencies {
 //    implementation 'org.webjars:js-cookie:2.2.1' //out of date
 //    implementation 'org.webjars:spin-js:2.1.0'
 
-	implementation 'tech.epic-breakfast-productions.openQuarterMaster.lib:open-qm-lib-core:1.0.58-4-117-1-SNAPSHOT'
-	implementation 'tech.epic-breakfast-productions.openQuarterMaster.lib:open-qm-lib-moduleDriver:1.0.1-DEV'
+	implementation 'tech.epic-breakfast-productions.openQuarterMaster.lib:open-qm-lib-core:1.0.58-4-28-1-SNAPSHOT'
+	implementation 'tech.epic-breakfast-productions.openQuarterMaster.lib:open-qm-lib-moduleDriver:1.0.2-DEV'
 
 	// https://mvnrepository.com/artifact/tech.units/indriya
 	//     https://unitsofmeasurement.gitbook.io/uom-guide/getting-started/getting-started-with-indriya
@@ -90,7 +90,7 @@ dependencies {
 java {
 	java {
 		toolchain {
-			languageVersion.set(JavaLanguageVersion.of(11))
+			languageVersion.set(JavaLanguageVersion.of(17))
 		}
 	}
 }
@@ -104,11 +104,14 @@ compileTestJava {
 	options.encoding = 'UTF-8'
 }
 
+//task runApp(type: JavaExec) {
+//	jvmArgs ('--add-opens java.base/jdk.lang=ALL-UNNAMED')
+//}
+
 test {
 	minHeapSize = "128m" // initial heap size
 	maxHeapSize = "1g" // maximum heap size
 	jvmArgs(
-		"--illegal-access=permit",
 		"--add-opens", "java.base/java.lang=ALL-UNNAMED",
 		"--add-opens", "java.base/java.io=ALL-UNNAMED",
 		"--add-opens", "java.base/java.util=ALL-UNNAMED",
